# DEETO

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  TODO.txt  requirements.txt
db-files/: cinque-electrode-model.csv  default-db.csv  default-electrode-model.csv  example-of-subject-model-electrode.txt
doc/: Doxyfile
doc/html/: AbstractWriter_8h.html  AbstractWriter_8h__dep__incl.map  AbstractWriter_8h__dep__incl.md5  AbstractWriter_8h__incl.map  AbstractWriter_8h__incl.md5  AbstractWriter_8h_source.html  AnatomicalPatchBuilder_8h.html  AnatomicalPatchBuilder_8h_source.html  ClinicalFrame_8h.html  ClinicalFrame_8h__dep__incl.map  ClinicalFrame_8h__dep__incl.md5  ClinicalFrame_8h__incl.map  ClinicalFrame_8h__incl.md5  ClinicalFrame_8h_source.html  ContactConstructor_8h.html  ContactConstructor_8h__incl.map  ContactConstructor_8h__incl.md5  ContactConstructor_8h_source.html  Definitions_8h.html  Definitions_8h__dep__incl.map  Definitions_8h__dep__incl.md5  Definitions_8h__incl.md5  Definitions_8h_source.html  ElectrodeModel_8h.html  ElectrodeModel_8h__dep__incl.map  ElectrodeModel_8h__dep__incl.md5  ElectrodeModel_8h__incl.map  ElectrodeModel_8h__incl.md5  ElectrodeModel_8h_source.html  Electrode_8h.html  Electrode_8h__dep__incl.map  Electrode_8h__dep__incl.md5  Electrode_8h__incl.map  Electrode_8h__incl.md5  Electrode_8h_source.html  FCSVReader_8h.html  FCSVReader_8h__incl.map  FCSVReader_8h__incl.md5  FCSVReader_8h_source.html  FCSVWriter_8h.html  (+84 more)
doc/latex/: AbstractWriter_8h.tex  AbstractWriter_8h__dep__incl.md5  AbstractWriter_8h__incl.md5  AnatomicalPatchBuilder_8h.tex  ClinicalFrame_8h.tex  ClinicalFrame_8h__dep__incl.md5  ClinicalFrame_8h__incl.md5  ContactConstructor_8h.tex  ContactConstructor_8h__incl.md5  Definitions_8h.tex  Definitions_8h__dep__incl.md5  Definitions_8h__incl.md5  ElectrodeModel_8h.tex  ElectrodeModel_8h__dep__incl.md5  ElectrodeModel_8h__incl.md5  Electrode_8h.tex  Electrode_8h__dep__incl.md5  Electrode_8h__incl.md5  FCSVReader_8h.tex  FCSVReader_8h__incl.md5  FCSVWriter_8h.tex  FCSVWriter_8h__incl.md5  GMPIEstimator_8h.tex  VTKModelConstructor_8h.tex  VTKModelConstructor_8h__dep__incl.md5  VTKModelConstructor_8h__incl.md5  VTKWriter_8h.tex  VTKWriter_8h__incl.md5  annotated.tex  classAbstractWriter.eps  classAbstractWriter.tex  classAbstractWriter__coll__graph.md5  classAbstractWriter__inherit__graph.md5  classAnatomicalPatchBuilder_3_01class_01T_01_4.tex  classAnatomicalPatchBuilder_3_01class_01T_01_4__coll__graph.md5  classClinicalFrame.tex  classContactConstructor.tex  classContactConstructor__coll__graph.md5  classElectrode.tex  classElectrodeModel.tex  (+22 more)
include/: AbstractWriter.h  AnatomicalPatchBuilder.h  ClinicalFrame.h  CmdParser.h  ContactConstructor.h  Definitions.h  Electrode.h  ElectrodeModel.h  ElectrodeModelReader.h  ElectrodeTrajectoryConstructor.h  FCSVReader.h  FCSVWriter.h  GMPIEstimator.h  VTKModelConstructor.h  VTKWriter.h  tester.h
slicer-wrapper/DEETO/: DEETO.py
src/: Ctopy.py  deeto.py  electrode_trajectory.py  image_tools.py  main.cpp
test/: CreateCTs.mlx  README.md  deeto.pm  make-files3.pl  plot_robustness_analyses.m  run_robustness_analyses.pl  testElectrodeTrajectory.py  test_reader.py  test_thr.py
test/priv/: AnatSpace2Mesh.m  AxelRot.m  Cyl.m  FreeSurferColorLUT.mat  HMAT_LUT.mat  Kc_optimal.m  MNI_hull_LR.mat  MNImesh.mat  S-matrix_to_MNI.mat  Yeo2011LUT.mat  aLabels2txt_new.m  aLabelsTargets2txt_new.m  addremovelist.fig  addremovelist.m  alpha_beta2delta.m  anatomicLabel.m  anatomicLabelFS.m  angleV.m  checkElectrodeStructure.m  checkProjectStructure.m  checkUpdates.m  clustering.m  concatenateAdjMat.m  curveGrid.m  defSpringsEnergy.m  (+67 more)
(+77 files in other folders)
